<resources>
    <string name="app_name">Aldeias Infantis Dashboard</string>

    <!-- Main Activity -->
    <string name="dashboard_header">DASHBOARD</string>
    <string name="acolhimento_casas_lares">ACOLHIMENTO EM CASAS LARES</string>
    <string name="fortalecimento_familiar">FORTALECIMENTO FAMILIAR</string>
    <string name="juventudes">JUVENTUDES</string>
    <string name="indicadores_gerais">INDICADORES GERAIS</string>
    <string name="last_month">MÊS ANTERIOR</string>
    <string name="last_year">ANO ANTERIOR</string>

    <!-- Add Information Dialog -->
    <string name="competence">competência</string>
    <string name="value_caps_lock">VALOR</string>
    <string name="header_caps_lock">CABEÇALHO</string>
    <string name="indicator_caps_lock">INDICADOR</string>

    <!-- Commons -->
    <string name="error">Erro</string>
    <string name="email">E-mail</string>
    <string name="send">ENVIAR</string>
    <string name="add_caps_lock">ADICIONAR</string>
    <string name="save_caps_lock">SALVAR</string>
    <string name="loading_ellipsis">Carregando…</string>

    <!-- General Result Messages -->
    <string name="empty_field_error_message">Por favor, preencha todos os campos</string>
    <string name="network_exception_message">Erro no processo devido a problemas de conexão</string>
    <string name="permission_denied_message">Permissão negada</string>
    <string name="login_time_out_message">Não foi possível logar na conta por problemas de conexão</string>
    <string name="confirm_logout_message">Deseja mesmo sair da conta?</string>
    <string name="auth_invalid_user_message">Usuário e/ou senha inválidos</string>
    <string name="unexpected_error_message">Ocorreu um erro inesperado. Por favor, tente denovo ou reinicie o aplicativo</string>
    <string name="server_error_message">Erro no servidor</string>
    <string name="connection_error_message">Erro ao carregar informações, deseja tentar novamente?</string>
    <!-- Information Activity Result Messages -->
    <string name="delete_information_confirmation_message">Este dado será excluido para todos os usuários do aplicativo, deseja continuar?</string>
    <!-- Sign Up Activity Result Messages -->
    <string name="signup_success_message">Cadastro realizado com sucesso!</string>
    <string name="invalid_email_message">Formato de e-mail fornecido não é válido</string>
    <string name="account_not_found_message">Conta não encontrada (se estiver correta, cheque sua conexão com a internet)</string>
    <string name="email_already_registered_error_message">E-mail já cadastrado</string>
    <string name="weak_password_error_message">A senha precisa ter no mínimo %1$d dígitos</string>
    <string name="registration_successful_made">Cadastro feito com sucesso!</string>
    <!-- Add Item Result Messages -->
    <string name="please_enter_an_integer">Por favor, insira um número inteiro como valor</string>

    <!-- Forgot Password Dialog -->
    <string name="forgot_password_dialog_text">Insira o e-mail da conta que você esqueceu a senha:</string>
    <string name="send_reset_password_email_successful">E-mail para redefinição de senha enviado com sucesso!</string>
    <string name="send_reset_password_email_error">E-mail não encontrado</string>

    <!-- Message Dialog -->
    <string name="message_error_ops_header">Ops!</string>
    <string name="message_error_header">Erro</string>
    <string name="message_success_header">Sucesso!</string>
    <string name="message_confirmation_header">Confirmar ação</string>
    <string name="message_dialog_close">Fechar</string>
    <string name="dialog_cancel_button">Cancelar</string>
    <string name="dialog_yes_button">Sim</string>

    <!-- Toast Messages -->
    <string name="item_successfully_edited_toast">Salvo com sucesso</string>

    <!-- Login Activity -->
    <string name="login_company_name">Aldeias Infantis</string>
    <string name="login_dashboard">Dashboard</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="remember_me">Lembre-se de mim</string>
    <string name="enter_button">Entrar</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="or">ou</string>
    <string name="create_account">Criar conta</string>

    <!-- Sign Up Activity -->
    <string name="name_hint">Nome</string>

    <!-- Informations Activity -->
    <string name="indicadores_gerais_mes">INDICADORES GERAIS - MÊS ANTERIOR</string>
    <string name="indicadores_gerais_ano">INDICADORES GERAIS - ANO ANTERIOR</string>
    <string name="information_items_count">%1$d ITENS</string>
    <string name="information_item_count">%1$d ITEM</string>

    <string name="login_link">Já é um doador? Acesse o <a href="https://aldeias.portaldodoador.org/login">Portal do Doador</a></string>
    <string name="become_donor">Torne-se um doador! Clique <a href="https://doe.aldeiasinfantis.org.br/?utm_source=app&amp;utm_medium=botao-doacao&amp;utm_campaign=aplicativo-aldeias">Aqui</a></string>
    <string name="general_info_title">COMPARATIVO DE:</string>
</resources>