<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/general_info_title"
        android:textSize="32sp"
        android:textColor="@color/primaryBlue"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="32sp"
        app:autoSizeStepGranularity="2sp"/>

    <Button
        android:id="@+id/mes_anterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_month"
        android:background="@color/white"
        android:textSize="22sp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/ano_anterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_year"
        android:background="@color/white"
        android:textSize="22sp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>

</LinearLayout>