<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:transitionName="logo"
        app:srcCompat="@drawable/img_logo_no_bg" />

    <LinearLayout
        android:id="@+id/login_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_company_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/login_dashboard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/email_edit_text"
                android:layout_alignBottom="@id/email_edit_text"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_baseline_email_24" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="278dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_line_white_bg"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="36dp"
                android:paddingEnd="4dp"
                android:paddingBottom="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/password_edit_text"
                android:layout_alignBottom="@id/password_edit_text"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_line_white_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="36dp"
                android:paddingEnd="4dp"
                android:paddingBottom="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </RelativeLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_gravity="start"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/remember_me"/>

        <androidx.cardview.widget.CardView
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:contentPadding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.06"
                android:text="@string/enter_button"
                android:textColor="@color/primaryBlue"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View style="@style/LoginRowView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <View style="@style/LoginRowView"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/create_account_btn"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:contentPadding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.06"
                android:text="@string/create_account"
                android:textColor="@color/primaryBlue"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>