<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/back_btn"-->
    <!--        android:layout_width="40dp"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginTop="25dp"-->
    <!--        android:background="@drawable/ic_baseline_arrow_back_24" />-->

    <ImageView
        android:id="@+id/back_btn_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/forgot_password_dialog_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_line_white_bg"
            android:ems="16"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <ViewFlipper
            android:id="@+id/send_view_flipper"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="18dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:contentPadding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:letterSpacing="0.06"
                    android:text="@string/send"
                    android:textColor="@color/primaryBlue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/forgot_password_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_bar_white" />

        </ViewFlipper>

    </LinearLayout>

</RelativeLayout>