<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <LinearLayout
        android:id="@+id/login_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/name_edit_text"
                android:layout_alignBottom="@id/name_edit_text"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_line_white_bg"
                android:hint="@string/name_hint"
                android:inputType="textCapWords"
                android:paddingStart="36dp"
                android:paddingEnd="4dp"
                android:paddingBottom="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/email_edit_text"
                android:layout_alignBottom="@id/email_edit_text"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_baseline_email_24" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_line_white_bg"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="36dp"
                android:paddingEnd="4dp"
                android:paddingBottom="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/password_edit_text"
                android:layout_alignBottom="@id/password_edit_text"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_line_white_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="36dp"
                android:paddingEnd="40dp"
                android:paddingBottom="3dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/password_visibility_btn_ll"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/password_edit_text"
                android:layout_alignBottom="@id/password_edit_text"
                android:layout_marginBottom="3dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_visibility_off_24" />

            </LinearLayout>

        </RelativeLayout>

        <ViewFlipper
            android:id="@+id/sign_up_view_flipper"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/sign_up_btn_cv"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:contentPadding="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:letterSpacing="0.06"
                    android:text="@string/create_account"
                    android:textColor="@color/primaryBlue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_bar_white" />

        </ViewFlipper>

    </LinearLayout>

</LinearLayout>